# RAGPerf

./: .clang-format-ignore  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/actions/cmake-setup/: action.yml
.github/workflows/: black-format.yml  clang-format.yml
cmake/: black_format.cmake  build_helper.cmake  clang_format.cmake  misc.cmake  python_env.cmake  third_party.cmake  utils.cmake
cmake/module/: FindClangFormat.cmake
config/: README.md  example_elastic.yaml  example_qdrant.yaml  lance_insert.yaml  lance_query.yaml  milvus_insert.yaml  milvus_query.yaml
config/monitor/: example_config.yaml
config/pdfimage/: lance_insert_pdfimage.yaml  lance_query_pdfimage.yaml  milvus_insert_pdfimage.yaml  milvus_query_pdfimage.yaml
config/pdftext/: lance_insert_pdftext.yaml  lance_query_pdftext.yaml
example/: .gitignore  CMakeLists.txt
example/monitoring_sys_lib/: common.py  test_parser.py  test_parser_new.py  test_run.py
monitoring_sys/: CMakeLists.txt  README.md  msys_defs.cmake
monitoring_sys/include/: cpu_meter.hh  disk_meter.hh  gpu_meter.hh  logger.hh  mem_meter.hh  meter.hh  meter.ipp  msys.hh  proc_meter.hh  utils.hh  utils.ipp
monitoring_sys/src/: cpu_meter.cc  disk_meter.cc  gpu_meter.cc  interface.cc  logger.cc  mem_meter.cc  meter.cc  msys.cc  proc_meter.cc  utils.cc
resource/: bash_utils.sh  example_req.txt  requirements.in  setup.sh
resource/black_format/: .black-format
resource/build_helper/: libclang_get_lib_version.py  py3_require_executable_module.py  py3_require_package.py
resource/clang_format/: .clang-format  run_clang_format.py
resource/proto/: cpu_metrics.proto  disk_metrics.proto  gpu_metrics.proto  mem_metrics.proto  proc_metrics.proto
script/: parser.py  run_insert.sh
src/: .gitignore  __init__.py  config.py  run_new.py  ui_client.py
src/RAGPipeline/: BaseRAGPipline.py  ImageRAGPipline.py  TextsRAGPipline.py  __init__.py
src/RAGPipeline/reranker/: BaseReranker.py  CrossEncoderReranker.py  __init__.py
src/RAGPipeline/responser/: BaseResponser.py  ImagesResponser.py  TextsResponser.py  __init__.py
src/RAGPipeline/retriever/: BaseRetriever.py  __init__.py
src/RAGRequest/: BaseRAGRequest.py  TextsRAGRequest.py  __init__.py
src/datasetLoader/: BaseDatasetLoader.py  PDFDatasetLoader.py  TextDatasetLoader.py  __init__.py
src/datasetPreprocess/: BaseDatasetPreprocess.py  PDFDatasetPreprocess.py  TextDatasetPreprocess.py  __init__.py
src/encoder/: BaseEncoder.py  ColPaliEncoder.py  __init__.py  sentenceTransformerEncoder.py
src/evaluator/: BaseEvaluator.py  README.md  RagasEvaluator.py  RagasOpenAI.py  Ragasvllm.py  __init__.py
src/monitoring_sys/: __init__.py
src/monitoring_sys/config_parser/: msys_config_parser.py
src/multimodal/: PDFPipeline.py  pdf_parse.py  structured_parser.py
src/rag_utils/: config.py  vec_db.py
src/utils/: colored_print.py  decorator.py  env_variable.py  logger.py  python_utils.py
src/vectordb/: DBInstance.py  README.md  __init__.py  chroma_api.py  elastic_api.py  lancedb_api.py  lancedb_interactive.py  milvus_api.py  milvus_interactive.py  milvus_util.py  qdrant_api.py
tests/: dataset_test.py  pipeline_test.py  simple_example.py
(+4 files in other folders)
